2010-12-04  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gspinbutton.R (widget$addHandlerChanged): fixed bug in handler

	* R/gcheckboxgroup.R (widget$getValue): fix to use.table version.

2010-12-03  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaa.R (EXTComponentNoItems): added new trait so that svalue<-
	doesn't call into ..values (when no items, not [ method, so no ..values)

	* R/gnotebook.R (widget$ExtCfgOptions): remove erroneous size
	setting in config

2010-11-30  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdf.R (widget$assignValue): fixed how values are transported
	to R

2010-11-29  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaa.R: tidied up the combining of strings to make javascript calls.

2010-11-28  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckboxgroup.R: Added use.table option. If TRUE widget uses
	grid with checkboxes to select multiple from. Doesn't set value
	from checked! (To fix)

2010-11-27  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckbox.R: added use.togglebutton option

	* R/gwindow.R: if a statusbar, use that to indicate assigning,
	handler running

2010-11-23  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gbigtable.R (widget$setValuesJS): override method from
	gtable. 

2010-11-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* inst/scripts/gWidgetsWWWAJAX.R: for proxystore, changed how we get path, using
	uri not path part of SERVER

	* R/LocalVersion.R (localServerOpen): check for urls, downloads if there

2010-11-21  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gprocessingjs.R: added this back in. Provides a more
	interactive graphic interface, although only low level operations
	are available.

2010-11-20  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtree.R (gtree): added gtree widget. Not fully featured, as
	there is no grid
